--- a/app/templates/enterprises/enterprises.html
+++ b/app/templates/enterprises/enterprises.html
@@ -9,7 +9,8 @@ Enterprises
 {% block page_content %}
 <div>
     <h1>Enterprises</h1>
-    <a class = "btn btn-default" href = "{{ url_for("enterprises.addEnterprise") }}" role = "button"><span class="glyphicon glyphicon-plus"></span></a>
+    <a class = "btn btn-default" title = "Add" href = "{{ url_for("enterprises.addEnterprise") }}" role = "button">
+        <span class="glyphicon glyphicon-plus"></span></a>
     <table class = "table">
         <thead>
             <tr>
@@ -26,10 +27,10 @@ Enterprises
                 <td>{{ enterprise.Name }}</td>
                 <td>{{ enterprise.Abbreviation }}</td>
                 <td>{{ enterprise.Description }}</td>
-                <td><a class = "btn btn-default" href = "{{ url_for("enterprises.editEnterprise", enterpriseId = enterprise.EnterpriseId) }}">
+                <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("enterprises.editEnterprise", enterpriseId = enterprise.EnterpriseId) }}">
                     <span class="glyphicon glyphicon-edit"></span></a></td>
-                <td><a class = "btn btn-default" href = "{{ url_for("enterprises.deleteEnterprise", enterpriseId = enterprise.EnterpriseId) }}">
-                    <span class="glyphicon glyphicon-trash"></span></a></td>
+                <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("enterprises.deleteEnterprise", 
+                    enterpriseId = enterprise.EnterpriseId) }}"><span class="glyphicon glyphicon-trash"></span></a></td>
             </tr>
             {% endfor %}
         </tbody>
