--- a/app/templates/elementAttributes/elementAttributeValuesDashboard.html
+++ b/app/templates/elementAttributes/elementAttributeValuesDashboard.html
@@ -24,8 +24,7 @@ Data Entry - Element Attribute Values
         <tbody>
             {% for elementAttribute in elementAttributes %}
             <tr>
-                <td><a class = "btn btn-default" data-toggle = "tooltip" title = "List Values"
-                    href = "{{ url_for("tagValues.listTagValues", tagId = elementAttribute.Tag.TagId, 
+                <td><a class = "btn btn-default" title = "List Values" href = "{{ url_for("tagValues.listTagValues", tagId = elementAttribute.Tag.TagId, 
                     lookupId = elementAttribute.Tag.LookupId) }}"><span class="glyphicon glyphicon-list"></span></a></td>
                 <td>{{ elementAttribute.AttributeTemplate.Name }}</td>
                 {% if elementAttribute.Tag.TagValues[0] %}
@@ -41,15 +40,14 @@ Data Entry - Element Attribute Values
                     <td></td>
                     <td></td>
                 {% endif %}
-                <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Add"
-                    href = "{{ url_for("elementAttributes.addElementAttributeValue", elementId = elementAttribute.ElementId,
-                    tagId = elementAttribute.Tag.TagId, lookupId = elementAttribute.Tag.LookupId) }}"><span class="glyphicon glyphicon-plus"></span></a></td>
+                <td><a class = "btn btn-default" title = "Add" href = "{{ url_for("elementAttributes.addElementAttributeValue", 
+                    elementId = elementAttribute.ElementId, tagId = elementAttribute.Tag.TagId, lookupId = elementAttribute.Tag.LookupId) }}">
+                    <span class="glyphicon glyphicon-plus"></span></a></td>
                 {% if elementAttribute.Tag.TagValues[0] %}
-                    <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Edit"
-                        href = "{{ url_for("elementAttributes.editElementAttributeValue", elementId = elementAttribute.ElementId,
-                        tagValueId = firstTagValue.TagValueId) }}"><span class="glyphicon glyphicon-edit"></span></a></td>
-                    <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Delete"
-                        href = "{{ url_for("elementAttributes.deleteElementAttributeValue",
+                    <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("elementAttributes.editElementAttributeValue", 
+                        elementId = elementAttribute.ElementId, tagValueId = firstTagValue.TagValueId) }}">
+                        <span class="glyphicon glyphicon-edit"></span></a></td>
+                    <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("elementAttributes.deleteElementAttributeValue",
                         elementId = elementAttribute.ElementId, tagValueId = firstTagValue.TagValueId) }}">
                         <span class="glyphicon glyphicon-trash"></span></a></td>
                 {% else %}
