--- a/app/templates/lookups/lookups.html
+++ b/app/templates/lookups/lookups.html
@@ -7,7 +7,7 @@ Lookups
 {% block page_content %}
 <div>
     <h1>Lookups</h1>
-    <a class = "btn btn-default" href = "{{ url_for("lookups.addLookup") }}" role = "button"><span class="glyphicon glyphicon-plus"></span></a>
+    <a class = "btn btn-default" title = "Add" href = "{{ url_for("lookups.addLookup") }}" role = "button"><span class="glyphicon glyphicon-plus"></span></a>
     <table class = "table">
         <thead>
             <tr>
@@ -23,11 +23,11 @@ Lookups
             <tr>
                 <td>{{ lookup.Enterprise.Abbreviation }}</td>
                 <td>{{ lookup.Name }}</td>
-                <td><a class = "btn btn-default" href = "{{ url_for("lookups.editLookup", lookupId = lookup.LookupId) }}">
+                <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("lookups.editLookup", lookupId = lookup.LookupId) }}">
                     <span class="glyphicon glyphicon-edit"></span></a></td>
-                <td><a class = "btn btn-default" href = "{{ url_for("lookupValues.listLookupValues", lookupId = lookup.LookupId) }}">
+                <td><a class = "btn btn-default" title = "List Values" href = "{{ url_for("lookupValues.listLookupValues", lookupId = lookup.LookupId) }}">
                     <span class="glyphicon glyphicon-list"></span></a></td>
-                <td><a class = "btn btn-default" href = "{{ url_for("lookups.deleteLookup", lookupId = lookup.LookupId) }}">
+                <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("lookups.deleteLookup", lookupId = lookup.LookupId) }}">
                     <span class="glyphicon glyphicon-trash"></span></a></td>
             </tr>
             {% endfor %}
