--- a/app/templates/elements/elementDashboard.html
+++ b/app/templates/elements/elementDashboard.html
@@ -25,14 +25,20 @@
             </tr>
         </thead>
         <tbody>
-            {% for eventFrameTemplates in eventFrameTemplatess %}
+            {% for eventFrameTemplate in eventFrameTemplates %}
             <tr>
                 <td><a class = "btn btn-default" title = "List Values"
                     href = "{#{ url_for("tagValues.listTagValues", tagId = elementAttribute.Tag.TagId, 
                     lookupId = elementAttribute.Tag.LookupId) }#}"><span class="glyphicon glyphicon-list"></span></a></td>
                 <td>{{ eventFrameTemplate.Name }}</td>
-                <td>{#{ eventFrame.StartTime }#}</td>
-                <td>{#{ eventFrame.EndTime }#}</td>
+                {% if eventFrameTemplate.EventFrames[0] %}
+                    {% set firstEventFrame = eventFrameTemplate.EventFrames | sort (attribute = "Timestamp", reverse = True) | first %}
+                    <td>{{ firstEventFrame.StartTime }}</td>
+                    <td>{{ firstEventFrame.EndTime }}</td>
+                {% else %}
+                    <td></td>
+                    <td></td>
+                {% endif %}
                 <td><a class = "btn btn-default" title = "Add" href = "{{ url_for("elements.addEventFrame") }}">
                     <span class="glyphicon glyphicon-plus"></span></a></td>
                 <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Edit"
