--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,7 @@
         </div>
         <div class = "navbar-collapse collapse">
             <ul class = "nav navbar-nav">
-                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Brewery Modeling</a>
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Brewery Modeling <span class="caret"></span></a>
                     <ul class = "dropdown-menu">
                         <li><a href = "{{ url_for("enterprises.listEnterprises") }}">Enterprises</a></li>
                         <li><a href = "{{ url_for("sites.listSites") }}">Sites</a></li>
@@ -27,17 +27,15 @@
                 </li>
             </ul>
             <ul class = "nav navbar-nav">
-                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Tags</a>
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Tags <span class="caret"></span></a>
                     <ul class = "dropdown-menu">
                         <li><a href = "{{ url_for("tags.listTags") }}">Tags</a></li>
                         <li><a href = "{{ url_for("tags.importTags") }}">Import</a></li>
                         <li><a href = "{{ url_for("tags.exportTags") }}">Export</a></li>
-                        <li><a href = "{{ url_for("unitOfMeasurements.listUnitOfMeasurements") }}">Units</a></li>
+                        <li><a href = "{{ url_for("unitOfMeasurements.listUnitOfMeasurements") }}">Units</span></a></li>
                     </ul>
                 </li>
-            </ul>
-            <ul class = "nav navbar-nav">
-                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Elements</a>
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Elements <span class="caret"></span></a>
                     <ul class = "dropdown-menu">
                         <li><a href = "{{ url_for("elementTemplates.listElementTemplates") }}">Element Templates</a></li>
                         <li><a href = "{{ url_for("elements.listElements") }}">Elements</a></li>
@@ -47,21 +45,13 @@
                         <li><a href = "{{ url_for("elementAttributes.exportElementAttributes") }}">Export</a></li>
                     </ul>
                 </li>
-            </ul>
-            <ul class = "nav navbar-nav">
-                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Event Frames</a>
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Event Frames <span class="caret"></span></a>
                     <ul class = "dropdown-menu">
                         <li><a href = "{{ url_for("eventFrameTemplates.listEventFrameTemplates") }}">Event Frame Templates</a></li>
                         <li><a href = "{{ url_for("eventFrames.listEventFrames") }}">Event Frames</a></li>
                     </ul>
                 </li>
-            </ul>
-            <ul class = "nav navbar-nav">
-                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Data Entry</a>
-                    <ul class = "dropdown-menu">
-                        <li><a href = "{{ url_for("elements.selectElement") }}">Element Dashboard</a></li>
-                    </ul>
-                </li>
+                <li><a href = "{{ url_for("elements.selectElement") }}">Data Entry</a></li>
             </ul>
         </div>
     </div>
