Hooked up event frame edit functionality.

--- a/app/templates/elements/elementDashboard.html
+++ b/app/templates/elements/elementDashboard.html
@@ -59,14 +59,15 @@
                 <td><a class = "btn btn-default" title = "Add" href = "{{ url_for("elements.addEventFrame",
                     elementId = element.ElementId, eventFrameTemplateId = eventFrameTemplate.EventFrameTemplateId) }}">
                     <span class="glyphicon glyphicon-plus"></span></a></td>
-                <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Edit"
-                    href = "{#{ url_for("elementAttributes.editElementAttributeValue", elementId = elementAttribute.ElementId,
-                    tagValueId = firstTagValue.TagValueId) }#}"><span class="glyphicon glyphicon-edit"></span></a></td>
                 {% if firstEventFrame %}
+                    <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Edit"
+                        href = "{{ url_for("eventFrames.editEventFrame", eventFrameId = firstEventFrame.EventFrameId) }}">
+                        <span class="glyphicon glyphicon-edit"></span></a></td>
                     <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Delete"
                         href = "{{ url_for("elements.deleteEventFrame", eventFrameId = firstEventFrame.EventFrameId) }}">
                         <span class="glyphicon glyphicon-trash"></a></td>
                 {% else %}
+                    <td></td>
                     <td></td>
                 {% endif %}
             </tr>
