--- a/app/templates/enterprises/enterprises.html
+++ b/app/templates/enterprises/enterprises.html
@@ -15,8 +15,8 @@ Enterprises
         <thead>
             <tr>
                 <th><a href = "{{ url_for("enterprises.listEnterprises") }}">Name</a></th>
-                <th><a href = "{{ url_for("enterprises.listEnterprises", sortColumn = "Abbreviation") }}">Abbreviation</a></th>
-                <th><a href = "{{ url_for("enterprises.listEnterprises", sortColumn = "Description") }}">Description</a></th>
+                <th><a href = "{{ url_for("enterprises.listEnterprises", sortColumn = "Enterprise.Abbreviation") }}">Abbreviation</a></th>
+                <th><a href = "{{ url_for("enterprises.listEnterprises", sortColumn = "Enterprise.Description") }}">Description</a></th>
                 <th></th>
                 <th></th>
             </tr>
